[workspace]
members = ["metrics", "metrics/metrics-macros"]

[package]
name = "xenos"
description = "Minecraft Profile Information Proxy"
version = "0.6.1"
authors = [
    "Joshua Dean Küpper <admin@joshua-kuepper.de>",
    "Paul Wagner <contact@paulwagner.dev>"
]
license = "MIT"
repository = "https://github.com/scrayosnet/xenos/"
readme = "README.md"
documentation = "https://github.com/scrayosnet/xenos/"
homepage = "https://xenos.scrayos.net/"
keywords = ["minecraft", "gamedev", "profile", "query", "grpc"]
edition = "2021"

[dependencies]
metrics = { path = "metrics" }
prost = "0.13"
prost-types = { version = "0.13" }
redis = { version = "0.27", features = ["serde_json", "json", "aio", "tokio-comp", "async-std-comp", "connection-manager"], optional = true }
tokio = { version = "1.41", features = ["full"] }
tonic = "0.12"
tonic-health = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "1.0"
regex = "1.11"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
lazy_static = "1.5"
serde_json = "1.0"
bytes = "1.8"
tower = "0.5"
hyper = "1.5"
futures = "0.3"
prometheus = { version = "0.13" }
futures-util = "0.3"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "debug-images", "reqwest", "rustls", "tower"] }
sentry-tracing = "0.34"
moka = { version = "0.12", features = ["future"] }
axum = "0.7"
axum-auth = "0.7"
iso8601 = { version = "0.6", features = ["serde"] }
trait-variant = "0.1"

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }

[dev-dependencies]
xenos = { path = ".", features = ["default", "static-testing"] }

[features]
default = []
static-testing = []
redis = ["dep:redis"]
