[workspace]
members = ["metrics", "metrics/metrics-macros"]

[package]
name = "xenos"
description = "Minecraft Profile Information Proxy"
version = "0.7.3"
authors = [
    "Joshua Dean Küpper <admin@joshua-kuepper.de>",
    "Paul Wagner <contact@paulwagner.dev>"
]
license = "MIT"
repository = "https://github.com/scrayosnet/xenos/"
readme = "README.md"
documentation = "https://github.com/scrayosnet/xenos/"
homepage = "https://xenos.scrayos.net/"
keywords = ["minecraft", "gamedev", "profile", "query", "grpc"]
edition = "2024"
rust-version = "1.85.0"

[dependencies]
metrics = { path = "metrics" }
prost = "0.13"
prost-types = { version = "0.13" }
redis = { version = "0.31", features = ["json", "aio", "tokio-comp", "async-std-comp", "connection-manager"], optional = true }
tokio = { version = "1.41", features = ["full", "test-util"] }
tonic = "0.13"
tonic-health = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
thiserror = "2.0"
regex = "1.11"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1.0"
bytes = "1.10"
hyper = "1.6"
prometheus-client = { version = "0.23" }
futures-util = "0.3"
config = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
sentry = { version = "0.38", default-features = false, features = ["backtrace", "contexts", "panic", "debug-images", "reqwest", "rustls", "tower"] }
sentry-tracing = "0.38"
moka = { version = "0.12", features = ["future"] }
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
iso8601 = { version = "0.6", features = ["serde"] }
trait-variant = "0.1"

[build-dependencies]
tonic-build = { version = "0.13", features = ["prost"] }

[dev-dependencies]
xenos = { path = ".", features = ["default", "static-testing"] }

[features]
default = []
static-testing = []
redis = ["dep:redis"]
