[workspace]
members = ["metrics", "metrics/metrics-macros"]

[package]
name = "xenos"
description = "Minecraft Profile Information Proxy"
version = "0.9.0"
authors = [
    "Joshua Dean Küpper <admin@joshua-kuepper.de>",
    "Paul Wagner <contact@paulwagner.dev>"
]
license = "MIT"
repository = "https://github.com/scrayosnet/xenos/"
readme = "README.md"
documentation = "https://github.com/scrayosnet/xenos/"
homepage = "https://xenos.scrayos.net/"
keywords = ["minecraft", "gamedev", "profile", "query", "grpc"]
edition = "2024"
rust-version = "1.88.0"

[dependencies]
metrics = { path = "metrics" }
prost = "0.14"
prost-types = { version = "0.14" }
redis = { version = "1.2", features = ["json", "aio", "tokio-rustls-comp", "connection-manager"], optional = true }
tokio = { version = "1.52", features = ["full", "test-util"] }
tonic = "0.14"
tonic-prost = "0.14"
tonic-health = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
thiserror = "2.0"
regex = "1.12"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1.0"
bytes = "1.11"
hyper = "1.9"
prometheus-client = { version = "0.24" }
futures-util = "0.3"
config = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
sentry = { version = "0.48", default-features = false, features = ["backtrace", "contexts", "panic", "debug-images", "reqwest", "rustls", "tower"] }
sentry-tracing = "0.48"
moka = { version = "0.12", features = ["future"] }
axum = "0.8"
axum-extra = { version = "0.12", features = ["typed-header"] }
iso8601 = { version = "0.6", features = ["serde"] }
trait-variant = "0.1"

[build-dependencies]
tonic-prost-build = { version = "0.14" }

[dev-dependencies]
xenos = { path = ".", features = ["default", "static-testing"] }

[features]
default = []
static-testing = []
redis = ["dep:redis"]

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types", "tonic-build"]
